cluster/beehive/network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: beehive
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-frontend
  namespace: beehive
spec:
  podSelector:
    matchLabels:
      app: beehive-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
      ports:
        - port: 3000
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend
  namespace: beehive
spec:
  podSelector:
    matchLabels:
      app: beehive-backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: beehive
          podSelector:
            matchLabels:
              cnpg.io/cluster: public-api-psql
      ports:
        - port: 5432
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-psql
  namespace: beehive
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      cnpg.io/cluster: public-api-psql
  ingress:
    - {}
  egress:
    - {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-psql-client
  namespace: beehive
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: postgres-client
  ingress:
    - {}
  egress:
    - {}

# Allowing frontend to api traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-api-port-8080
  namespace: beehive
spec:
  podSelector:
    matchLabels:
      app: beehive-frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: beehive-backend
      ports:
        - protocol: TCP
          port: 8080
